@@ -1,22 +1,24 @@
 #' @rdname LearnerParam
 #' @export
 makeNumericLearnerParam = function(id, lower = -Inf, upper = Inf, default,
-  when = "train", requires = NULL) {
+  when = "train", requires = NULL, tunable = TRUE) {
 
-  p = makeNumericParam(id, lower, upper, default = default, requires = requires)
+  p = makeNumericParam(id, lower, upper, default = default, requires = requires, tunable = tunable)
   learnerParamFromParam(p, when)
 }
 
 #' @rdname LearnerParam
 #' @export
 makeNumericVectorLearnerParam = function(id, len = as.integer(NA), lower = -Inf,
-  upper = Inf, default, when = "train", requires = NULL) {
+  upper = Inf, default, when = "train", requires = NULL, tunable = TRUE) {
 
   len = asInt(len, na.ok = TRUE)
   if (is.na(len))
-    p = makeNumericVectorParam(id, len = 1, lower = lower, upper = upper, default = default, requires = requires)
+    p = makeNumericVectorParam(id, len = 1, lower = lower, upper = upper, default = default,
+      requires = requires, tunable = tunable)
   else
-    p = makeNumericVectorParam(id, len = len, lower = lower, upper = upper, default =  default, requires = requires)
+    p = makeNumericVectorParam(id, len = len, lower = lower, upper = upper, default =  default,
+      requires = requires, tunable = tunable)
   p = learnerParamFromParam(p, when)
   p$len = len
   return(p)
@@ -26,22 +28,24 @@ makeNumericVectorLearnerParam = function(id, len = as.integer(NA), lower = -Inf,
 #' @rdname LearnerParam
 #' @export
 makeIntegerLearnerParam = function(id, lower = -Inf, upper = Inf,
-  default, when = "train", requires = NULL) {
+  default, when = "train", requires = NULL, tunable = TRUE) {
 
-  p = makeIntegerParam(id, lower, upper, default = default, requires = requires)
+  p = makeIntegerParam(id, lower, upper, default = default, requires = requires, tunable = tunable)
   learnerParamFromParam(p, when)
 }
 
 #' @rdname LearnerParam
 #' @export
 makeIntegerVectorLearnerParam = function(id, len = as.integer(NA), lower = -Inf,
-  upper = Inf, default, when = "train", requires = NULL) {
+  upper = Inf, default, when = "train", requires = NULL, tunable = TRUE) {
 
   len = asInt(len, na.ok = TRUE)
   if (is.na(len))
-    p = makeIntegerVectorParam(id, len = 1, lower = lower, upper = upper, default = default, requires = requires)
+    p = makeIntegerVectorParam(id, len = 1, lower = lower, upper = upper, default = default,
+      requires = requires, tunable = tunable)
   else
-    p = makeIntegerVectorParam(id, len = len, lower = lower, upper = upper, default = default, requires = requires)
+    p = makeIntegerVectorParam(id, len = len, lower = lower, upper = upper, default = default,
+      requires = requires, tunable = tunable)
   p = learnerParamFromParam(p, when)
   p$len = len
   return(p)
@@ -50,22 +54,24 @@ makeIntegerVectorLearnerParam = function(id, len = as.integer(NA), lower = -Inf,
 #' @rdname LearnerParam
 #' @export
 makeDiscreteLearnerParam = function(id, values, default,
-  when = "train", requires = NULL) {
+  when = "train", requires = NULL, tunable = TRUE) {
 
-  p = makeDiscreteParam(id, values, default = default, requires = requires)
+  p = makeDiscreteParam(id, values, default = default, requires = requires, tunable = tunable)
   learnerParamFromParam(p, when)
 }
 
 #' @rdname LearnerParam
 #' @export
 makeDiscreteVectorLearnerParam = function(id, len = as.integer(NA), values, default,
-  when = "train", requires = NULL) {
+  when = "train", requires = NULL, tunable = TRUE) {
 
   len = asInt(len, na.ok = TRUE)
   if (is.na(len))
-    p = makeDiscreteVectorParam(id, len = 1, values = values, default = default, requires = requires)
+    p = makeDiscreteVectorParam(id, len = 1, values = values, default = default, requires = requires,
+      tunable = tunable)
   else
-    p = makeDiscreteVectorParam(id, len = len, values = values, default = default, requires = requires)
+    p = makeDiscreteVectorParam(id, len = len, values = values, default = default, requires = requires,
+      tunable = tunable)
   p = learnerParamFromParam(p, when)
   p$len = len
   return(p)
@@ -73,23 +79,22 @@ makeDiscreteVectorLearnerParam = function(id, len = as.integer(NA), values, defa
 
 #' @rdname LearnerParam
 #' @export
-makeLogicalLearnerParam = function(id, default, when = "train",
-  requires = NULL) {
+makeLogicalLearnerParam = function(id, default, when = "train", requires = NULL, tunable = TRUE) {
 
-  p = makeLogicalParam(id, default = default, requires = requires)
+  p = makeLogicalParam(id, default = default, requires = requires, tunable = tunable)
   learnerParamFromParam(p, when)
 }
 
 #' @rdname LearnerParam
 #' @export
 makeLogicalVectorLearnerParam = function(id, len = as.integer(NA), default, when = "train",
-  requires = NULL) {
+  requires = NULL, tunable = TRUE) {
 
   len = asInt(len, na.ok = TRUE)
   if (is.na(len))
-    p = makeLogicalVectorParam(id, len = 1, default = default, requires = requires)
+    p = makeLogicalVectorParam(id, len = 1, default = default, requires = requires, tunable = tunable)
   else
-    p = makeLogicalVectorParam(id, len = len, default = default, requires = requires)
+    p = makeLogicalVectorParam(id, len = len, default = default, requires = requires, tunable = tunable)
   p = learnerParamFromParam(p, when)
   p$len = len
   return(p)
