@@ -3,6 +3,7 @@ ParamHelpers_1.5:
 - getDefaults: new option include.null
 - convertParamSetToIrace: removed argument 'digits' to keep maximum precision of boundaries
 - added renderOptPathPlot and plotOptPath for plotting of optimization paths.
+- added property 'tunable' to make*Param
 
 ParamHelpers_1.4:
 - sampleValue(s): 'discrete.names' now only affects discrtete params and not logicals anymore.
